Adjusted margin on top & bottom to prevent overlap with header

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -106,7 +106,7 @@ h1{
 }
 
 .center{
-    margin: 0 auto;
+    margin: 3rem auto;
     height: 100%;
     width: 80%;
 }
